# test-sphinx-publish

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-sphinx.yaml
docs/: conf.py
docs/source/: about.rst  conf.py  index.rst
src/test-sphinx-publish/: __init__.py
